# TicTacToe

./: CMakeLists.txt
.cache/clangd/index/: TicTac.cpp.704E823FF2E45C90.idx  TicTac.h.6BDD9297BD14D48B.idx  main.cpp.84DF0DBEEAEFA6C1.idx
src/: TicTac.cpp  TicTac.h  main.cpp
